// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledInput should be rendered correctly 1`] = `
<div
  className="container root size-36"
>
  <div
    className="uui-label-top"
  >
    <div>
      <div
        className="container uui-input-box -clickable root size-36 mode-form"
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LabeledInput should be rendered correctly with props 1`] = `
<div
  className="container root size-36"
>
  <div
    className="uui-label-left"
  >
    <div
      className="labelWrapper"
    >
      <label
        className="uui-label"
      >
        Test label
        <div
          className="container uui-icon uui-enabled uui-labeled-input-info-icon"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </label>
    </div>
    <div
      className="rightChildrenPosition"
    >
      <div
        className="container uui-input-box -clickable root size-36 mode-form"
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="uui-flex-row container align-items-top"
    style={
      Object {
        "columnGap": "12px",
        "rowGap": undefined,
      }
    }
  >
    <div
      className="uui-invalid-message"
      role="alert"
    >
      Test invalid message
    </div>
  </div>
</div>
`;
